# test-perf

./: .clang-format  README.md
TestC++/: CMakeLists.txt  README.md
TestC++/cmake/: build_sources_list.cmake  cmake_init.cmake  deploy_dependencies.cmake  msvc.cmake  post_copy_directory_excluding.cmake  post_copy_dlls.cmake
TestC++/cmake/libs/: cuda.cmake
TestC++/cmake/modules/: FindCodeMeter.cmake  FindDeckLink.cmake  FindEbus.cmake  FindGenICam.cmake  FindGoogleTest.cmake  FindLive555.cmake  FindNDI.cmake  FindNVML.cmake  FindNVTX.cmake  FindSDL2.cmake  FindSDL2main.cmake  FindSSP.cmake  FindcuDNN.cmake  Findh264bitstream.cmake
TestC++/src/: CMakeLists.txt  CudaUtils.cpp  CudaUtils.h  GPUQueue.cpp  GPUQueue.h  SafeQueue.h  ThreadWorker.cpp  ThreadWorker.h  main.cpp
TestCUDA/: CMakeLists.txt  README.md
TestCUDA/cmake/: cuda.cmake
TestCUDA/kernelColorConversion/: CMakeLists.txt  README.md
TestCUDA/kernelColorConversion/src/: CMakeLists.txt  kernel.cu  main.cpp
TestCUDA/src/: kernel.h  main.cpp
